# min-rag-demo

./: .gitignore  README.md  config.py  main.py  pyproject.toml  pytest.ini
docs/: java_basics_faq.md  java_collections_faq.md  java_exceptions_faq.md  java_frameworks_faq.md  java_oop_faq.md  machine_learning.md  python_advanced_faq.md  python_basics.md  python_basics_faq.md  python_best_practices_faq.md  python_libraries_faq.md  python_oop_faq.md  rag_systems.md
lightweight/: CHANGELOG.md  Makefile  README.md  config.py  main.py  pyproject.toml
tests/: test_local_model_validation.py  test_main.py  test_main_pytest.py  test_rag_system.py
