[project]
name = "lightweight-rag"
version = "0.1.0"
description = "A lightweight RAG system using PyTorch and scikit-learn"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "accelerate>=0.20.0",
    "sentence-transformers>=2.2.0",
    "jupyterlab>=4.4.6",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "requests>=2.31.0",
    "mlx>=0.28.0",
    "mlx-lm>=0.26.4",
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
mlx = [
    "mlx>=0.2.0",
    "mlx-lm>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
